# MyTestApp

./: .gitignore  CITATION.cff  LICENSE  OPENCLAW_GLOBAL.md  README.md  plan.md  pyproject.toml
scripts/: demo_pcsk9.py
src/gwas_loop/: __init__.py  __main__.py  loop.py  runner.py
src/gwas_loop/benchmark/: __init__.py  runner.py
src/gwas_loop/data/: __init__.py  download_gwas.py  downloader.py  drug_database.py  parser.py  traits.py  validated_genes.py
src/gwas_loop/evaluation/: __init__.py  evaluator.py
src/gwas_loop/failure_detection/: __init__.py  detector.py
src/gwas_loop/figures/: __init__.py  benchmark_tables.py  plots.py
src/gwas_loop/hypothesis/: __init__.py  generator.py
src/gwas_loop/innovation/: __init__.py  calibration.py  cross_trait.py  disagreement_model.py  locus_classifier.py  tissue_adaptive.py
src/gwas_loop/manuscript/: __init__.py  methods_section.py
src/gwas_loop/memory/: __init__.py  registry.py
src/gwas_loop/methods/: __init__.py  base.py  chromatin.py  coloc.py  distance.py  ensemble.py  eqtl.py  finemapping.py  magma.py  network.py  pops.py  susie_real.py  twas.py  vep.py
src/gwas_loop/pipeline/: __init__.py  locus_pipeline.py
src/gwas_loop/prototyping/: __init__.py  builder.py
src/gwas_loop/translational/: __init__.py  clinical_trial.py  confidence.py  drug_mapping.py  hypothesis_report.py  mechanism.py  repurposing.py  (+1 more)
tests/: test_core.py  test_data.py  test_data_extended.py  test_figures.py  test_innovation.py  test_manuscript.py  test_methods.py  test_runner.py  test_smoke.py  test_susie.py  test_translational.py
