[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gwas-research-loop"
version = "0.1.0"
description = "Self-improving GWAS gene prioritization framework"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
deep = ["torch>=2.0", "pymc>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
